labs/08_data/mysql-deployment-empty.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-mysql
  labels:
    app: spring-boot-example
spec:
  ports:
    - port: 3306
  selector:
    app: spring-boot-example
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-mysql
  labels:
    app: spring-boot-example
spec:
  selector:
    matchLabels:
      app: spring-boot-example
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-boot-example
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        emptyDir: {}
